Changelog
=========

1.2 (unreleased)
----------------

- Move h1, add search results count in search page title & handle JS refresh
  [laulaz]

- Handle 404 page
  [vpiret]

- Migrate to plone 5
  [oxydedefer]

- Add missing translations for accessibility view title
  [laulaz]

- Add missing translations for contact-info view title
  [laulaz]


1.1 (2012-11-12)
----------------

- Nothing changed yet.


1.0 (2012-11-09)
----------------

- Package created using zopeskel
  []