@@ -1,4 +1,8 @@
-# -*- extra stuff goes here -*-
+# -*- coding: utf-8 -*-
+
+from zope.i18nmessageid import MessageFactory
+
+_ = MessageFactory("collective.anysurfer")
 
 
 def initialize(context):
